Restrict past date selections in appointment calendar and include consultant salutations in reports